--- a/C++/Cadena/Cadena.cbp
+++ b/C++/Cadena/Cadena.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Fecha" />
+		<Option title="Cadena" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Fecha" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Cadena" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -16,11 +16,10 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
-					<Add directory="./" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Fecha" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Cadena" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
@@ -29,16 +28,14 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-O2" />
-					<Add directory="./" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="Fecha.cpp" />
-		<Unit filename="Fecha.h" />
-		<Unit filename="FechaInvalidaException.h" />
+		<Unit filename="Cadena.cpp" />
+		<Unit filename="Cadena.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
